# python-solar-plus-intelbras

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: python-publish.yml  pythonpackage.yml
docs/: index.html  index.md
examples/: alerts.py  inverters.py  notifications.py  plants.py  plants_detail.py  records.py  records_year.py  records_years.py
search/: search_index.json
solar_plus_intelbras/: __init__.py  enums.py  solar_plus_intelbras.py
tests/: conftest.py  test_solar_plus_intelbras.py  test_version.py
