[tool.poetry]
name = "solar_plus_intelbras"
version = "0.1.0"
description = "A wrapper for api solar plus intelbras"
authors = ["Hudson Brendon <contato.hudsonbrendon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.10.5"
requests = "^2.32.3"
requests-mock = "^1.12.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.2"
pre-commit = "^4.1.0"
pytest = "^8.3.4"
pytest-sugar = "^1.0.0"
pytest-cov = "^6.0.0"
pytest-xdist = "^3.6.1"
coverage = "^7.4.2"
pytest-lazy-fixture = "^0.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
